"From Dupli" in Cycles Texture Coordinates not working #40712

Closed
opened 2014-06-19 20:28:56 +02:00 by Gottfried Hofmann · 14 comments

System Information
Operating system and graphics card

Ubuntu 14.04 x86 dupli.bug.blend

Blender Version
Broken: 2.71 RC2
Worked: (optional)

Short description of error

"From Dupli" in Cycles Texture Coordinate node not working

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open the attached .blend, render/start preview

**System Information** Operating system and graphics card Ubuntu 14.04 x86 [dupli.bug.blend](https://archive.blender.org/developer/F94768/dupli.bug.blend) **Blender Version** Broken: 2.71 RC2 Worked: (optional) **Short description of error** "From Dupli" in Cycles Texture Coordinate node not working **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open the attached .blend, render/start preview

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Gottfried Hofmann 2014-06-19 20:28:56 +02:00

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Added subscriber: @ChristophPohler

Added subscriber: @ChristophPohler

I got the same Problem withe Particels

I got the same Problem withe Particels

The following file is simpler, it works in 2.69 but not in 2.70 and not in 2.71 RC2:

dupli.bug1.blend

The following file is simpler, it works in 2.69 but not in 2.70 and not in 2.71 RC2: [dupli.bug1.blend](https://archive.blender.org/developer/F94786/dupli.bug1.blend)

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

It does not work in the UV Map node either (anymore).

It does not work in the UV Map node either (anymore).
Member

The issue was caused by changes to "for_render" flags during the threaded depsgraph commit:
709041ed0b

This replaced widespread usage of G.is_rendering and derived flags by a common EvaluationContext struct with a for_render setting.

Problem is that the previous dupli code was not so strict about the meaning of this flag and now there is some ambiguity: for_render is really only true for full render evaluation ("F12 render"), while false for viewport preview renders. The old G.is_rendering checks were also generating Orco/UV coordinates for previews, but this is now omitted.

For reference:

dupliverts:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$545

duplifaces:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$807
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$765

dupliparticles:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$837

The issue was caused by changes to "for_render" flags during the threaded depsgraph commit: 709041ed0b This replaced widespread usage of `G.is_rendering` and derived flags by a common `EvaluationContext` struct with a `for_render` setting. Problem is that the previous dupli code was not so strict about the meaning of this flag and now there is some ambiguity: `for_render` is really only true for full render evaluation ("F12 render"), while false for viewport preview renders. The old `G.is_rendering` checks were also generating Orco/UV coordinates for previews, but this is now omitted. For reference: dupliverts: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$545 duplifaces: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$807 https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$765 dupliparticles: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c;d1b45f7f7c77c964a0dfd27c5518c063cbb77026$837
Member

Added subscriber: @Sergey

Added subscriber: @Sergey

I just tried again and it works with UV when hitting F12 in my second test. The file I sent earliers seems to have more problems. Strange :(

I just tried again and it works with UV when hitting F12 in my second test. The file I sent earliers seems to have more problems. Strange :(

Hi Lukasstoenne
many thank you that you have this request approved as soon

Hi Lukasstoenne many thank you that you have this request approved as soon

This issue was referenced by 2fe0cf54a5

This issue was referenced by 2fe0cf54a5827cac5a8d67dc6786bf7a7dc45950
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2fe0cf54a5.

Closed by commit 2fe0cf54a5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40712
No description provided.