source/blender/blenkernel/intern/mesh.c
@@ -2179,7 +2179,7 @@ Mesh *BKE_mesh_new_from_object(
 				 *               implemented, this is to be rethinked.
 				 */
 				EvaluationContext eval_ctx = {0};
-				eval_ctx.for_render = render;
+				eval_ctx.mode = DAG_EVAL_RENDER;
 				BKE_displist_make_mball_forRender(&eval_ctx, sce, ob, &disp);
 				BKE_mesh_from_metaball(&disp, tmpmesh);
 				BKE_displist_free(&disp);
